--- a/RestaurantSigloXXI/Vista/MainWindowAdmin.xaml
+++ b/RestaurantSigloXXI/Vista/MainWindowAdmin.xaml
@@ -8,8 +8,39 @@
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:local="clr-namespace:Vista"
         mc:Ignorable="d"
-        Title="RESTAURANT SIGLO XXI - BIENVENIDO ADMINISTRADOR"  Height="648" Width="1143.334"  WindowTitleBrush="Black" ResizeMode="NoResize" Icon="imagenes/logoFinal.png" WindowStartupLocation="CenterScreen" TitleCharacterCasing="Normal"  BorderBrush="{DynamicResource {x:Static SystemColors.ActiveCaptionTextBrushKey}}" GlowBrush="Black" NonActiveBorderBrush="#FF0A0202" WindowTransitionsEnabled="False" BorderThickness="0" >
-
+        Title="RESTAURANT SIGLO XXI - BIENVENIDO ADMINISTRADOR"  Height="648" Width="1143.334"  WindowTitleBrush="Black" ResizeMode="NoResize" Icon="imagenes/logoFinal2.png"  IconEdgeMode="Aliased" WindowStartupLocation="CenterScreen" TitleCharacterCasing="Normal"  BorderBrush="{DynamicResource {x:Static SystemColors.ActiveCaptionTextBrushKey}}" GlowBrush="Black" NonActiveBorderBrush="#FF0A0202" WindowTransitionsEnabled="False" BorderThickness="0" TitleCaps="False" Cursor="Arrow">
+    <Controls:MetroWindow.LeftWindowCommands>
+        <Controls:WindowCommands>
+            <!--Acceso directo a Facebook-->
+            <Button ToolTip="Facebook" Name="FacebookButton" Click="FacebookButton_Click">
+                <Rectangle Width="22" Height="22" Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
+                    <Rectangle.OpacityMask>
+                        <VisualBrush Stretch="Uniform"
+                                     Visual="{StaticResource appbar_social_facebook}" />
+                    </Rectangle.OpacityMask>
+                </Rectangle>
+            </Button>
+            <!--Acceso directo a Twitter-->
+            <Button ToolTip="Twitter" Name="TwitterButton" Click="TwitterButton_Click">
+                <Rectangle Width="22" Height="22" Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
+                    <Rectangle.OpacityMask>
+                        <VisualBrush Stretch="Uniform"
+                                     Visual="{StaticResource appbar_twitter_bird}" />
+                    </Rectangle.OpacityMask>
+                </Rectangle>
+            </Button>
+            <!--Acceso directo a Instagram-->
+            <Button ToolTip="Instagram"  Name="GoogleButton" Click="InstagramButton_Click">
+                <Rectangle Width="22"  Height="22" Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
+                    <Rectangle.OpacityMask>
+                        <VisualBrush Stretch="Uniform"
+                                     Visual="{StaticResource appbar_camera}"
+                                     />
+                    </Rectangle.OpacityMask>
+                </Rectangle>
+            </Button>
+        </Controls:WindowCommands>
+    </Controls:MetroWindow.LeftWindowCommands>
 
     <Controls:MetroWindow.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -17,50 +48,71 @@
             <GradientStop Color="#FFC6D6F2" Offset="0.994"/>
         </LinearGradientBrush>
     </Controls:MetroWindow.Background>
+
+    <Controls:MetroWindow.RightWindowCommands>
+        <Controls:WindowCommands>
+            <!--Acceso directo a Cerrar Sesión-->
+            <Button ToolTip="Cerrar Sesión" Name="CerrarSesionButton" Click="CerrarSesion_Click">
+                <Rectangle Width="22" Height="22" Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
+                    <Rectangle.OpacityMask>
+                        <VisualBrush Stretch="Uniform"
+                                     Visual="{StaticResource appbar_door_leave}" />
+                    </Rectangle.OpacityMask>
+                </Rectangle>
+            </Button>
+            <!--
+            Acceso directo a Contactar
+            <Button ToolTip="Contactar" Name="ContactButton" >
+                <Rectangle Width="22" Height="22" Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
+                    <Rectangle.OpacityMask>
+                        <VisualBrush Stretch="Uniform"
+                                     Visual="{StaticResource appbar_email_minimal}" />
+                    </Rectangle.OpacityMask>
+                </Rectangle>
+            </Button> -->
+        </Controls:WindowCommands>
+    </Controls:MetroWindow.RightWindowCommands>
+
     <Grid Margin="10,0,0,0">
-        <Image x:Name="image" HorizontalAlignment="Left" Height="620" VerticalAlignment="Top" Width="1151" Source="Imagenes/about-img.jpg" Margin="-17,0,-6,0" Stretch="Fill" Opacity="0.5" Cursor="Arrow"/>
 
-        <Controls:Tile Margin="17,10,972,565" Height="Auto" Width="Auto" Background="{x:Null}"  BorderBrush="{DynamicResource {x:Static SystemColors.GradientActiveCaptionBrushKey}}" Click="Tile_Click" BorderThickness="1" Controls:ScrollViewerHelper.IsHorizontalScrollWheelEnabled="True" KeepDragging="False" ForceCursor="True">
-            <Controls:ControlsHelper.MouseOverBorderBrush>
+        <Image x:Name="image" HorizontalAlignment="Left" Height="620" VerticalAlignment="Top" Width="1151" Source="Imagenes/about-img.jpg" Margin="-17,0,-6,0" Stretch="Fill" Opacity="0.4" Cursor="Arrow"/>
 
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="Black" Offset="0"/>
-                    <GradientStop Color="#FF040528" Offset="1"/>
-                </LinearGradientBrush>
-            </Controls:ControlsHelper.MouseOverBorderBrush>
-            <Grid Width="142">
-                <Image x:Name="image1" Margin="7,6,99,10.333" Source="Imagenes/Logout.png" />
-                <Label x:Name="label" Content="Cerrar Sesión" HorizontalAlignment="Left" Margin="33,4,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="14.667"/>
-            </Grid>
-        </Controls:Tile>
-        <Controls:Tile Margin="175,175,843,217" Click="Tile_Click_AdmCliente" Height="Auto" Controls:ControlsHelper.MouseOverBorderBrush="#FF11233F" Width="Auto">
-            <Controls:Tile.Effect>
-                <DropShadowEffect BlurRadius="6" Color="#FF11233F"/>
-            </Controls:Tile.Effect>
-            <Controls:Tile.Background>
-                <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0,0">
-                    <GradientStop Color="#FF00FFC9" Offset="1"/>
-                    <GradientStop Color="#FF0F00FF"/>
-                    <GradientStop Color="#FF059EDD" Offset="0.636"/>
-                    <GradientStop Color="#FF0863E9" Offset="0.336"/>
-                </LinearGradientBrush>
-            </Controls:Tile.Background>
-            <Grid Height="228" Width="110">
-                <Image x:Name="image4" HorizontalAlignment="Left" Height="82" Margin="21,50,0,0" VerticalAlignment="Top" Width="75" Source="imagenes/logoFinal.png">
+
+        <Controls:Tile ToolTip="Administrar Clientes" Margin="175,175,799,345" Click="Tile_Click_AdmCliente" Height="Auto" Controls:ControlsHelper.MouseOverBorderBrush="#FFCB5F21" Width="Auto" Foreground="#FFCB5F21"  BorderBrush="#FFCB5F21" Background="#FF040100" Opacity="0.85" >
+
+            <Grid >
+                <Image x:Name="image4" Height="66" VerticalAlignment="Top" Source="Imagenes/User-Group.png" Margin="36,0">
                     <Image.Effect>
-                        <DropShadowEffect Opacity="0.8"/>
+                        <DropShadowEffect Opacity="0.795" Color="#FF838383"/>
                     </Image.Effect>
                 </Image>
-                <Label x:Name="label3" Content="Administrar &#10;   Clientes" HorizontalAlignment="Left" Margin="9,145,0,0" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" FontSize="14" BorderThickness="1">
+                <Label x:Name="label3" Content="Administrar Clientes" Margin="0,56,0,-0.333" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" FontSize="14" BorderThickness="1" Height="29" RenderTransformOrigin="0.5,0.5">
                     <Label.Effect>
-                        <DropShadowEffect BlurRadius="6" Opacity="0.9" ShadowDepth="2"/>
+                        <DropShadowEffect BlurRadius="6" Opacity="0.8" ShadowDepth="2" Color="#FF838383"/>
                     </Label.Effect>
                 </Label>
 
             </Grid>
         </Controls:Tile>
-       
-        
+        <Label x:Name="label" Content="Bienvenido, Administrador" Margin="408,82,407,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="24"/>
+        <Controls:Tile ToolTip="Administrar Clientes" Margin="373,175,601,345" Click="Tile_Click_ListadoCliente" Height="Auto" Controls:ControlsHelper.MouseOverBorderBrush="#FFCB5F21" Width="Auto" Foreground="#FFCB5F21"  BorderBrush="#FFCB5F21" Background="#FF040100" Opacity="0.85" >
+
+            <Grid Height="90" >
+                <Image x:Name="image1" Height="61" VerticalAlignment="Top" Source="Imagenes/ListadoClientes.png" Margin="36,0,40.333,0">
+                    <Image.Effect>
+                        <DropShadowEffect Opacity="0.795" Color="#FF838383"/>
+                    </Image.Effect>
+                </Image>
+                <Label x:Name="label1" Content="Listar Clientes"  VerticalAlignment="Top" Foreground="White" FontWeight="Bold" FontSize="14" BorderThickness="1" Height="29" RenderTransformOrigin="0.5,0.5" Margin="23,61,23.333,0">
+                    <Label.Effect>
+                        <DropShadowEffect BlurRadius="6" Opacity="0.8" ShadowDepth="2" Color="#FF838383"/>
+                    </Label.Effect>
+                </Label>
+
+            </Grid>
+        </Controls:Tile>
+
+
 
     </Grid>
 
