--- a/RestaurantSigloXXI/Vista/WPFListadoCliente.xaml
+++ b/RestaurantSigloXXI/Vista/WPFListadoCliente.xaml
@@ -1,4 +1,4 @@
-﻿<Controls:MetroWindow x:Class="Vista.ListadoCliente"
+﻿<Controls:MetroWindow x:Class="Vista.WPFListadoCliente"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,7 +11,8 @@
                       
         xmlns:local="clr-namespace:Vista"
         mc:Ignorable="d"
-        Title="Lista de Clientes" Height="503.166" Width="724.667" WindowTitleBrush="Black" WindowStyle="ToolWindow" Background="#FFD2DBEC" FontWeight="Bold" WindowStartupLocation="CenterScreen" Cursor="Arrow" Icon="Imagenes/LogoFinal2.png" ResizeMode="NoResize" TitleCharacterCasing="Normal"  >
+        BorderThickness="2" BorderBrush="Black"
+        Title="Lista de Clientes" Height="503.166" Width="724.667" WindowTitleBrush="Black" WindowStyle="ToolWindow" Background="#FFD2DBEC" FontWeight="Bold" WindowStartupLocation="CenterScreen" Cursor="Arrow" Icon="Imagenes/LogoFinal.png" ResizeMode="NoResize" TitleCharacterCasing="Normal" Closing="MetroWindow_Closing"  >
     <Grid Background="#FFDBDFE3">
 
         <Image x:Name="image" HorizontalAlignment="Left" Height="476" VerticalAlignment="Top" Width="732" Source="Imagenes/about-img.jpg" Stretch="Fill" Opacity="0.3" Margin="0,0,-12.667,0"/>
@@ -44,7 +45,7 @@
             </Button.Background>
         </Button>
         <Button x:Name="btnPasarAForm" Content="Traspasar" HorizontalAlignment="Left" Margin="396,400,0,0" VerticalAlignment="Top" Width="73" FontWeight="Normal"  Controls:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnPasarAForm_Click"/>
-        <Image x:Name="images" HorizontalAlignment="Left" Height="64" Margin="527,39,0,0" VerticalAlignment="Top" Width="149" Source="Imagenes/logoFinal.png"/>
+        <Image x:Name="images" HorizontalAlignment="Left" Height="64" Margin="527,39,0,0" VerticalAlignment="Top" Width="117" Source="Imagenes/logo2.png"/>
         <Button x:Name="btnRefrescar2" HorizontalAlignment="Left" Margin="635,396,0,0" VerticalAlignment="Top" Width="36"  Style="{DynamicResource MahApps.Metro.Styles.MetroCircleButtonStyle}" Height="36" BorderBrush="Black" Click="btnRefrescar2_Click"  >
             <Button.Background>
                 <ImageBrush ImageSource="Imagenes/Command-Refresh-blue.png"/>
