--- a/RestaurantSigloXXI/Vista/WPFListadoCliente.xaml
+++ b/RestaurantSigloXXI/Vista/WPFListadoCliente.xaml
@@ -17,13 +17,13 @@
 
         <Image x:Name="image" HorizontalAlignment="Left" Height="476" VerticalAlignment="Top" Width="732" Source="Imagenes/about-img.jpg" Stretch="Fill" Opacity="0.3" Margin="0,0,-12.667,0"/>
         <Button x:Name="btnPasar" Content="Traspasar" HorizontalAlignment="Left" Margin="396,400,0,0" VerticalAlignment="Top" Width="73" FontWeight="Normal"  Controls:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnPasar_Click"/>
-        <DataGrid x:Name="dgLista" HorizontalAlignment="Left" Margin="41,132,0,0" VerticalAlignment="Top" Height="212" Width="637" FontWeight="Normal" >
+        <DataGrid x:Name="dgLista" HorizontalAlignment="Left" Margin="41,132,0,0" VerticalAlignment="Top" Height="212" Width="637" FontWeight="Normal" BorderBrush="#FFCB5F21" Foreground="Black" >
 
             <DataGrid.Resources>
                 <Style TargetType="{x:Type DataGridCell}">
                     <Style.Triggers>
                         <Trigger Property="DataGridCell.IsSelected" Value="True">
-                            <Setter Property="Background" Value="#FF01A0E2" />
+                            <Setter Property="Background" Value="#FFFAA575" />
                             <Setter Property="Foreground" Value="Black" />
                         </Trigger>
                     </Style.Triggers>
@@ -34,7 +34,7 @@
         <GroupBox x:Name="gbFiltrar" Header="Filtrar Información" HorizontalAlignment="Left" Margin="41,21,0,0" VerticalAlignment="Top" Height="85" Width="448"  Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" FontSize="13.333" BorderBrush="#FFCB5F21">
             <Grid HorizontalAlignment="Left" Height="43" Margin="10,4,0,0" VerticalAlignment="Top" Width="354">
                 <Label x:Name="label" Content="Rut Cliente:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="22,1,0,0"/>
-                <TextBox x:Name="txtFiltroRut"  Controls:TextBoxHelper.Watermark="Ej. 11222333-1" HorizontalAlignment="Left" Height="23" Margin="116,1,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="164" FontWeight="Normal" Controls:TextBoxHelper.ClearTextButton="True"/>
+                <TextBox x:Name="txtFiltroRut"  Controls:TextBoxHelper.Watermark="Ej. 11222333-1" HorizontalAlignment="Left" Height="23" Margin="116,1,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="164" FontWeight="Normal" Controls:TextBoxHelper.ClearTextButton="True" SelectionBrush="#FFCB5F21"/>
                 <Button x:Name="btnFiltrarRut" Content="Filtrar" HorizontalAlignment="Left" Margin="313,0,-34,14" VerticalAlignment="Bottom" Width="75" FontWeight="Normal"  Controls:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnFiltrarRut_Click"/>
                 <Button x:Name="btnFiltrarRutFor" Content="Filtrar" HorizontalAlignment="Left" Margin="313,0,-34,13" VerticalAlignment="Bottom" Width="75" FontWeight="Normal"  Controls:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnFiltrarRutFor_Click"/>
             </Grid>
